--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -3,26 +3,40 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/nav_graph"
-    app:startDestination="@id/FirstFragment">
+    app:startDestination="@id/MenuFragment">
 
     <fragment
-        android:id="@+id/FirstFragment"
-        android:name="com.example.project.FirstFragment"
+        android:id="@+id/MenuFragment"
+        android:name="com.example.project.MenuFragment"
         android:label="@string/first_fragment_label"
-        tools:layout="@layout/fragment_first">
+        tools:layout="@layout/fragment_menu">
 
         <action
             android:id="@+id/action_FirstFragment_to_SecondFragment"
-            app:destination="@id/SecondFragment" />
+            app:destination="@id/FilmListFragment" />
     </fragment>
     <fragment
-        android:id="@+id/SecondFragment"
-        android:name="com.example.project.SecondFragment"
+        android:id="@+id/FilmListFragment"
+        android:name="com.example.project.presentation.list.FilmListFragment"
         android:label="@string/second_fragment_label"
-        tools:layout="@layout/fragment_second">
+        tools:layout="@layout/fragment_film_list">
 
         <action
-            android:id="@+id/action_SecondFragment_to_FirstFragment"
-            app:destination="@id/FirstFragment" />
+            android:id="@+id/action_FilmListFragment_to_MenuFragment"
+            app:destination="@id/MenuFragment" />
+
+        <action
+            android:id="@+id/action_FilmListFragment_to_FilmDetailFragment"
+            app:destination="@id/FilmDetailFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/FilmDetailFragment"
+        android:name="com.example.project.presentation.detail.FilmDetailFragment"
+        android:label="@string/second_fragment_label"
+        tools:layout="@layout/fragment_film_detail">
+
+        <action
+            android:id="@+id/action_FilmDetailFragment_to_FilmListFragment"
+            app:destination="@id/FilmListFragment" />
     </fragment>
 </navigation>
