--- a/app/src/main/res/layout/fragment_people_detail.xml
+++ b/app/src/main/res/layout/fragment_people_detail.xml
@@ -1,6 +1,244 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    tools:context=".presentation.detail.PeopleDetailFragment">
+
+    <Button
+        android:id="@+id/button_return"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/return_generic"
+        app:layout_constraintVertical_bias="0.1"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        />
+
+    <TextView
+        android:id="@+id/people_detail_name"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/name_generic"
+        android:textColor="@color/yellow_star_wars"
+        android:textAlignment="center"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/button_return"
+        app:layout_constraintEnd_toStartOf="@+id/people_detail_name_value"
+        app:layout_constraintBottom_toTopOf="@+id/people_detail_height"
+        />
+
+    <TextView
+        android:id="@+id/people_detail_name_value"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textColor="@color/yellow_star_wars"
+        android:textAlignment="center"
+        app:layout_constraintStart_toEndOf="@+id/people_detail_name"
+        app:layout_constraintTop_toBottomOf="@+id/button_return"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/people_detail_height"
+        />
+
+    <TextView
+        android:id="@+id/people_detail_height"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/height_generic"
+        android:textColor="@color/yellow_star_wars"
+        android:textAlignment="center"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/people_detail_name"
+        app:layout_constraintEnd_toStartOf="@+id/people_detail_height_value"
+        app:layout_constraintBottom_toTopOf="@+id/people_detail_mass"
+        />
+
+    <TextView
+        android:id="@+id/people_detail_height_value"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textColor="@color/yellow_star_wars"
+        android:textAlignment="center"
+        app:layout_constraintStart_toEndOf="@+id/people_detail_height"
+        app:layout_constraintTop_toBottomOf="@+id/people_detail_name"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/people_detail_mass"
+        />
+
+    <TextView
+        android:id="@+id/people_detail_mass"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/mass_generic"
+        android:textColor="@color/yellow_star_wars"
+        android:textAlignment="center"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/people_detail_height"
+        app:layout_constraintEnd_toStartOf="@+id/people_detail_mass_value"
+        app:layout_constraintBottom_toTopOf="@+id/people_detail_hairColor"
+        />
+
+    <TextView
+        android:id="@+id/people_detail_mass_value"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textColor="@color/yellow_star_wars"
+        android:textAlignment="center"
+        app:layout_constraintStart_toEndOf="@+id/people_detail_mass"
+        app:layout_constraintTop_toBottomOf="@+id/people_detail_height"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/people_detail_hairColor"
+        />
+
+    <TextView
+        android:id="@+id/people_detail_hairColor"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/hairColor_generic"
+        android:textColor="@color/yellow_star_wars"
+        android:textAlignment="center"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/people_detail_mass"
+        app:layout_constraintEnd_toStartOf="@+id/people_detail_hairColor_value"
+        app:layout_constraintBottom_toTopOf="@+id/people_detail_skinColor"
+        />
+
+    <TextView
+        android:id="@+id/people_detail_hairColor_value"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textColor="@color/yellow_star_wars"
+        android:textAlignment="center"
+        app:layout_constraintStart_toEndOf="@+id/people_detail_hairColor"
+        app:layout_constraintTop_toBottomOf="@+id/people_detail_mass"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/people_detail_skinColor"
+        />
+
+    <TextView
+        android:id="@+id/people_detail_skinColor"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/skinColor_generic"
+        android:textColor="@color/yellow_star_wars"
+        android:textAlignment="center"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/people_detail_hairColor"
+        app:layout_constraintEnd_toStartOf="@+id/people_detail_skinColor_value"
+        app:layout_constraintBottom_toTopOf="@+id/people_detail_eyeColor"
+        />
+
+    <TextView
+        android:id="@+id/people_detail_skinColor_value"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textColor="@color/yellow_star_wars"
+        android:textAlignment="center"
+        app:layout_constraintStart_toEndOf="@+id/people_detail_skinColor"
+        app:layout_constraintTop_toBottomOf="@+id/people_detail_hairColor"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/people_detail_eyeColor"
+        />
+
+    <TextView
+        android:id="@+id/people_detail_eyeColor"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/eyeColor_generic"
+        android:textColor="@color/yellow_star_wars"
+        android:textAlignment="center"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/people_detail_skinColor"
+        app:layout_constraintEnd_toStartOf="@+id/people_detail_eyeColor_Value"
+        app:layout_constraintBottom_toTopOf="@+id/people_detail_birthYear"
+        />
+
+    <TextView
+        android:id="@+id/people_detail_eyeColor_Value"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textColor="@color/yellow_star_wars"
+        android:textAlignment="center"
+        app:layout_constraintStart_toEndOf="@+id/people_detail_eyeColor"
+        app:layout_constraintTop_toBottomOf="@+id/people_detail_skinColor"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/people_detail_birthYear"
+        />
+
+    <TextView
+        android:id="@+id/people_detail_birthYear"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/birthYear_generic"
+        android:textColor="@color/yellow_star_wars"
+        android:textAlignment="center"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/people_detail_eyeColor"
+        app:layout_constraintEnd_toStartOf="@+id/people_detail_birthYear_value"
+        app:layout_constraintBottom_toTopOf="@+id/people_detail_gender"
+        />
+
+    <TextView
+        android:id="@+id/people_detail_birthYear_value"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textColor="@color/yellow_star_wars"
+        android:textAlignment="center"
+        app:layout_constraintStart_toEndOf="@+id/people_detail_birthYear"
+        app:layout_constraintTop_toBottomOf="@+id/people_detail_eyeColor"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/people_detail_gender"
+        />
+
+    <TextView
+        android:id="@+id/people_detail_gender"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/gender_generic"
+        android:textColor="@color/yellow_star_wars"
+        android:textAlignment="center"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/people_detail_birthYear"
+        app:layout_constraintEnd_toStartOf="@+id/people_detail_gender_value"
+        app:layout_constraintBottom_toBottomOf="parent"
+        />
+
+    <TextView
+        android:id="@+id/people_detail_gender_value"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textColor="@color/yellow_star_wars"
+        android:textAlignment="center"
+        app:layout_constraintStart_toEndOf="@+id/people_detail_gender"
+        app:layout_constraintTop_toBottomOf="@+id/people_detail_birthYear"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        />
+
+    <ProgressBar
+        android:id="@+id/people_detail_loader"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/button_return" />
+
+    <TextView
+        android:id="@+id/people_detail_error"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:text="@string/error_generic"
+        android:textAlignment="center"
+        android:textColor="@color/yellow_star_wars"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/button_return"
+        />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
