Changement de page sur PeopleListFragment

--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -58,6 +58,10 @@
         <action
             android:id="@+id/action_PeopleListFragment_to_PeopleDetailFragment"
             app:destination="@id/PeopleDetailFragment" />
+
+        <action
+            android:id="@+id/action_refresh_PeopleListFragment"
+            app:destination="@id/PeopleListFragment" />
     </fragment>
     <fragment
         android:id="@+id/PeopleDetailFragment"
