--- a/app/src/main/res/layout/fragment_film_list.xml
+++ b/app/src/main/res/layout/fragment_film_list.xml
@@ -41,6 +41,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:text="@string/error_generic"
+        android:textColor="@color/yellow_star_wars"
         android:textAlignment="center"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
