--- a/app/src/main/res/layout/fragment_starship_detail.xml
+++ b/app/src/main/res/layout/fragment_starship_detail.xml
@@ -73,7 +73,7 @@
         android:id="@+id/starship_detail_class"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/class_generic"
+        android:text="@string/starship_class_generic"
         android:textColor="@color/yellow_star_wars"
         android:textAlignment="center"
         app:layout_constraintStart_toStartOf="parent"
