--- a/app/src/main/res/layout/element_item.xml
+++ b/app/src/main/res/layout/element_item.xml
@@ -10,13 +10,13 @@
         android:id="@+id/element_name"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        tools:text="Name"
-        android:textColor="@color/yellow_star_wars"
         android:layout_marginStart="25dp"
-        app:layout_constraintTop_toTopOf="parent"
+        android:textColor="@color/yellow_star_wars"
+        android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:text="Name" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
