--- a/app/src/main/res/layout/film_item.xml
+++ b/app/src/main/res/layout/film_item.xml
@@ -11,6 +11,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         tools:text="Title"
+        android:textSize="20sp"
         android:textColor="@color/yellow_star_wars"
         android:layout_marginStart="25dp"
         app:layout_constraintTop_toTopOf="parent"
