--- a/app/src/main/res/layout/fragment_people_detail.xml
+++ b/app/src/main/res/layout/fragment_people_detail.xml
@@ -21,11 +21,13 @@
 
     <TextView
         android:id="@+id/people_detail_name"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:text="@string/name_generic"
         android:textColor="@color/yellow_star_wars"
         android:textAlignment="center"
+        android:textSize="18sp"
+        android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/button_return"
         app:layout_constraintEnd_toStartOf="@+id/people_detail_name_value"
@@ -34,10 +36,11 @@
 
     <TextView
         android:id="@+id/people_detail_name_value"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:textColor="@color/yellow_star_wars"
         android:textAlignment="center"
+        android:textSize="16sp"
         app:layout_constraintStart_toEndOf="@+id/people_detail_name"
         app:layout_constraintTop_toBottomOf="@+id/button_return"
         app:layout_constraintEnd_toEndOf="parent"
@@ -46,11 +49,13 @@
 
     <TextView
         android:id="@+id/people_detail_height"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:text="@string/height_generic"
         android:textColor="@color/yellow_star_wars"
         android:textAlignment="center"
+        android:textSize="18sp"
+        android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/people_detail_name"
         app:layout_constraintEnd_toStartOf="@+id/people_detail_height_value"
@@ -59,10 +64,11 @@
 
     <TextView
         android:id="@+id/people_detail_height_value"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:textColor="@color/yellow_star_wars"
         android:textAlignment="center"
+        android:textSize="16sp"
         app:layout_constraintStart_toEndOf="@+id/people_detail_height"
         app:layout_constraintTop_toBottomOf="@+id/people_detail_name"
         app:layout_constraintEnd_toEndOf="parent"
@@ -71,11 +77,13 @@
 
     <TextView
         android:id="@+id/people_detail_mass"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:text="@string/mass_generic"
         android:textColor="@color/yellow_star_wars"
         android:textAlignment="center"
+        android:textSize="18sp"
+        android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/people_detail_height"
         app:layout_constraintEnd_toStartOf="@+id/people_detail_mass_value"
@@ -84,10 +92,11 @@
 
     <TextView
         android:id="@+id/people_detail_mass_value"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:textColor="@color/yellow_star_wars"
         android:textAlignment="center"
+        android:textSize="16sp"
         app:layout_constraintStart_toEndOf="@+id/people_detail_mass"
         app:layout_constraintTop_toBottomOf="@+id/people_detail_height"
         app:layout_constraintEnd_toEndOf="parent"
@@ -96,11 +105,13 @@
 
     <TextView
         android:id="@+id/people_detail_hairColor"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:text="@string/hairColor_generic"
         android:textColor="@color/yellow_star_wars"
         android:textAlignment="center"
+        android:textSize="18sp"
+        android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/people_detail_mass"
         app:layout_constraintEnd_toStartOf="@+id/people_detail_hairColor_value"
@@ -109,10 +120,11 @@
 
     <TextView
         android:id="@+id/people_detail_hairColor_value"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:textColor="@color/yellow_star_wars"
         android:textAlignment="center"
+        android:textSize="16sp"
         app:layout_constraintStart_toEndOf="@+id/people_detail_hairColor"
         app:layout_constraintTop_toBottomOf="@+id/people_detail_mass"
         app:layout_constraintEnd_toEndOf="parent"
@@ -121,11 +133,13 @@
 
     <TextView
         android:id="@+id/people_detail_skinColor"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:text="@string/skinColor_generic"
         android:textColor="@color/yellow_star_wars"
         android:textAlignment="center"
+        android:textSize="18sp"
+        android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/people_detail_hairColor"
         app:layout_constraintEnd_toStartOf="@+id/people_detail_skinColor_value"
@@ -134,10 +148,11 @@
 
     <TextView
         android:id="@+id/people_detail_skinColor_value"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:textColor="@color/yellow_star_wars"
         android:textAlignment="center"
+        android:textSize="16sp"
         app:layout_constraintStart_toEndOf="@+id/people_detail_skinColor"
         app:layout_constraintTop_toBottomOf="@+id/people_detail_hairColor"
         app:layout_constraintEnd_toEndOf="parent"
@@ -146,11 +161,13 @@
 
     <TextView
         android:id="@+id/people_detail_eyeColor"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:text="@string/eyeColor_generic"
         android:textColor="@color/yellow_star_wars"
         android:textAlignment="center"
+        android:textSize="18sp"
+        android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/people_detail_skinColor"
         app:layout_constraintEnd_toStartOf="@+id/people_detail_eyeColor_Value"
@@ -159,10 +176,11 @@
 
     <TextView
         android:id="@+id/people_detail_eyeColor_Value"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:textColor="@color/yellow_star_wars"
         android:textAlignment="center"
+        android:textSize="16sp"
         app:layout_constraintStart_toEndOf="@+id/people_detail_eyeColor"
         app:layout_constraintTop_toBottomOf="@+id/people_detail_skinColor"
         app:layout_constraintEnd_toEndOf="parent"
@@ -171,11 +189,13 @@
 
     <TextView
         android:id="@+id/people_detail_birthYear"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:text="@string/birthYear_generic"
         android:textColor="@color/yellow_star_wars"
         android:textAlignment="center"
+        android:textSize="18sp"
+        android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/people_detail_eyeColor"
         app:layout_constraintEnd_toStartOf="@+id/people_detail_birthYear_value"
@@ -184,10 +204,11 @@
 
     <TextView
         android:id="@+id/people_detail_birthYear_value"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:textColor="@color/yellow_star_wars"
         android:textAlignment="center"
+        android:textSize="16sp"
         app:layout_constraintStart_toEndOf="@+id/people_detail_birthYear"
         app:layout_constraintTop_toBottomOf="@+id/people_detail_eyeColor"
         app:layout_constraintEnd_toEndOf="parent"
@@ -196,11 +217,13 @@
 
     <TextView
         android:id="@+id/people_detail_gender"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:text="@string/gender_generic"
         android:textColor="@color/yellow_star_wars"
         android:textAlignment="center"
+        android:textSize="18sp"
+        android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/people_detail_birthYear"
         app:layout_constraintEnd_toStartOf="@+id/people_detail_gender_value"
@@ -209,10 +232,11 @@
 
     <TextView
         android:id="@+id/people_detail_gender_value"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:textColor="@color/yellow_star_wars"
         android:textAlignment="center"
+        android:textSize="16sp"
         app:layout_constraintStart_toEndOf="@+id/people_detail_gender"
         app:layout_constraintTop_toBottomOf="@+id/people_detail_birthYear"
         app:layout_constraintEnd_toEndOf="parent"
@@ -230,10 +254,11 @@
 
     <TextView
         android:id="@+id/people_detail_error"
-        android:layout_width="0dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/error_generic"
         android:textAlignment="center"
+        android:textSize="18sp"
         android:textColor="@color/yellow_star_wars"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
