--- a/app/src/main/res/layout/fragment_planet_detail.xml
+++ b/app/src/main/res/layout/fragment_planet_detail.xml
@@ -21,11 +21,13 @@
 
     <TextView
         android:id="@+id/planet_detail_name"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:text="@string/name_generic"
         android:textColor="@color/yellow_star_wars"
         android:textAlignment="center"
+        android:textSize="18sp"
+        android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/button_return"
         app:layout_constraintEnd_toStartOf="@+id/planet_detail_name_value"
@@ -34,10 +36,11 @@
 
     <TextView
         android:id="@+id/planet_detail_name_value"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:textColor="@color/yellow_star_wars"
         android:textAlignment="center"
+        android:textSize="16sp"
         app:layout_constraintStart_toEndOf="@+id/planet_detail_name"
         app:layout_constraintTop_toBottomOf="@+id/button_return"
         app:layout_constraintEnd_toEndOf="parent"
@@ -46,11 +49,13 @@
 
     <TextView
         android:id="@+id/planet_detail_diameter"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:text="@string/diameter_generic"
         android:textColor="@color/yellow_star_wars"
         android:textAlignment="center"
+        android:textSize="18sp"
+        android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/planet_detail_name"
         app:layout_constraintEnd_toStartOf="@+id/planet_detail_diameter_value"
@@ -59,10 +64,11 @@
 
     <TextView
         android:id="@+id/planet_detail_diameter_value"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:textColor="@color/yellow_star_wars"
         android:textAlignment="center"
+        android:textSize="16sp"
         app:layout_constraintStart_toEndOf="@+id/planet_detail_diameter"
         app:layout_constraintTop_toBottomOf="@+id/planet_detail_name"
         app:layout_constraintEnd_toEndOf="parent"
@@ -71,11 +77,13 @@
 
     <TextView
         android:id="@+id/planet_detail_rotationPeriod"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:text="@string/rotationPeriod_generic"
         android:textColor="@color/yellow_star_wars"
         android:textAlignment="center"
+        android:textSize="18sp"
+        android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/planet_detail_diameter"
         app:layout_constraintEnd_toStartOf="@+id/planet_detail_rotationPeriod_value"
@@ -84,10 +92,11 @@
 
     <TextView
         android:id="@+id/planet_detail_rotationPeriod_value"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:textColor="@color/yellow_star_wars"
         android:textAlignment="center"
+        android:textSize="16sp"
         app:layout_constraintStart_toEndOf="@+id/planet_detail_rotationPeriod"
         app:layout_constraintTop_toBottomOf="@+id/planet_detail_diameter"
         app:layout_constraintEnd_toEndOf="parent"
@@ -96,11 +105,13 @@
 
     <TextView
         android:id="@+id/planet_detail_orbitalPeriod"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:text="@string/orbitalPeriod_generic"
         android:textColor="@color/yellow_star_wars"
         android:textAlignment="center"
+        android:textSize="18sp"
+        android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/planet_detail_rotationPeriod"
         app:layout_constraintEnd_toStartOf="@+id/planet_detail_orbitalPeriod_value"
@@ -109,10 +120,11 @@
 
     <TextView
         android:id="@+id/planet_detail_orbitalPeriod_value"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:textColor="@color/yellow_star_wars"
         android:textAlignment="center"
+        android:textSize="16sp"
         app:layout_constraintStart_toEndOf="@+id/planet_detail_orbitalPeriod"
         app:layout_constraintTop_toBottomOf="@+id/planet_detail_rotationPeriod"
         app:layout_constraintEnd_toEndOf="parent"
@@ -121,11 +133,13 @@
 
     <TextView
         android:id="@+id/planet_detail_gravity"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:text="@string/gravity_generic"
         android:textColor="@color/yellow_star_wars"
         android:textAlignment="center"
+        android:textSize="18sp"
+        android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/planet_detail_orbitalPeriod"
         app:layout_constraintEnd_toStartOf="@+id/planet_detail_gravity_value"
@@ -134,10 +148,11 @@
 
     <TextView
         android:id="@+id/planet_detail_gravity_value"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:textColor="@color/yellow_star_wars"
         android:textAlignment="center"
+        android:textSize="16sp"
         app:layout_constraintStart_toEndOf="@+id/planet_detail_gravity"
         app:layout_constraintTop_toBottomOf="@+id/planet_detail_orbitalPeriod"
         app:layout_constraintEnd_toEndOf="parent"
@@ -146,11 +161,13 @@
 
     <TextView
         android:id="@+id/planet_detail_population"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:text="@string/population_generic"
         android:textColor="@color/yellow_star_wars"
         android:textAlignment="center"
+        android:textSize="18sp"
+        android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/planet_detail_gravity"
         app:layout_constraintEnd_toStartOf="@+id/planet_detail_population_value"
@@ -159,10 +176,11 @@
 
     <TextView
         android:id="@+id/planet_detail_population_value"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:textColor="@color/yellow_star_wars"
         android:textAlignment="center"
+        android:textSize="16sp"
         app:layout_constraintStart_toEndOf="@+id/planet_detail_population"
         app:layout_constraintTop_toBottomOf="@+id/planet_detail_gravity"
         app:layout_constraintEnd_toEndOf="parent"
@@ -171,11 +189,13 @@
 
     <TextView
         android:id="@+id/planet_detail_climate"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:text="@string/climate_generic"
         android:textColor="@color/yellow_star_wars"
         android:textAlignment="center"
+        android:textSize="18sp"
+        android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/planet_detail_population"
         app:layout_constraintEnd_toStartOf="@+id/planet_detail_climate_value"
@@ -184,10 +204,11 @@
 
     <TextView
         android:id="@+id/planet_detail_climate_value"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:textColor="@color/yellow_star_wars"
         android:textAlignment="center"
+        android:textSize="16sp"
         app:layout_constraintStart_toEndOf="@+id/planet_detail_climate"
         app:layout_constraintTop_toBottomOf="@+id/planet_detail_population"
         app:layout_constraintEnd_toEndOf="parent"
@@ -196,11 +217,13 @@
 
     <TextView
         android:id="@+id/planet_detail_terrain"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:text="@string/terrain_generic"
         android:textColor="@color/yellow_star_wars"
         android:textAlignment="center"
+        android:textSize="18sp"
+        android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/planet_detail_climate"
         app:layout_constraintEnd_toStartOf="@+id/planet_detail_terrain_value"
@@ -209,10 +232,11 @@
 
     <TextView
         android:id="@+id/planet_detail_terrain_value"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:textColor="@color/yellow_star_wars"
         android:textAlignment="center"
+        android:textSize="16sp"
         app:layout_constraintStart_toEndOf="@+id/planet_detail_terrain"
         app:layout_constraintTop_toBottomOf="@+id/planet_detail_climate"
         app:layout_constraintEnd_toEndOf="parent"
@@ -230,10 +254,11 @@
 
     <TextView
         android:id="@+id/planet_detail_error"
-        android:layout_width="0dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/error_generic"
         android:textAlignment="center"
+        android:textSize="18sp"
         android:textColor="@color/yellow_star_wars"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
