--- a/app/src/main/res/layout/fragment_species_detail.xml
+++ b/app/src/main/res/layout/fragment_species_detail.xml
@@ -21,11 +21,13 @@
 
     <TextView
         android:id="@+id/species_detail_name"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:text="@string/name_generic"
         android:textColor="@color/yellow_star_wars"
         android:textAlignment="center"
+        android:textSize="18sp"
+        android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/button_return"
         app:layout_constraintEnd_toStartOf="@+id/species_detail_name_value"
@@ -34,10 +36,11 @@
 
     <TextView
         android:id="@+id/species_detail_name_value"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:textColor="@color/yellow_star_wars"
         android:textAlignment="center"
+        android:textSize="16sp"
         app:layout_constraintStart_toEndOf="@+id/species_detail_name"
         app:layout_constraintTop_toBottomOf="@+id/button_return"
         app:layout_constraintEnd_toEndOf="parent"
@@ -46,11 +49,13 @@
 
     <TextView
         android:id="@+id/species_detail_classification"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:text="@string/classification_generic"
         android:textColor="@color/yellow_star_wars"
         android:textAlignment="center"
+        android:textSize="18sp"
+        android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/species_detail_name"
         app:layout_constraintEnd_toStartOf="@+id/species_detail_classification_value"
@@ -59,10 +64,11 @@
 
     <TextView
         android:id="@+id/species_detail_classification_value"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:textColor="@color/yellow_star_wars"
         android:textAlignment="center"
+        android:textSize="16sp"
         app:layout_constraintStart_toEndOf="@+id/species_detail_classification"
         app:layout_constraintTop_toBottomOf="@+id/species_detail_name"
         app:layout_constraintEnd_toEndOf="parent"
@@ -71,11 +77,13 @@
 
     <TextView
         android:id="@+id/species_detail_designation"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:text="@string/designation_generic"
         android:textColor="@color/yellow_star_wars"
         android:textAlignment="center"
+        android:textSize="18sp"
+        android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/species_detail_classification"
         app:layout_constraintEnd_toStartOf="@+id/species_detail_designation_value"
@@ -84,10 +92,11 @@
 
     <TextView
         android:id="@+id/species_detail_designation_value"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:textColor="@color/yellow_star_wars"
         android:textAlignment="center"
+        android:textSize="16sp"
         app:layout_constraintStart_toEndOf="@+id/species_detail_designation"
         app:layout_constraintTop_toBottomOf="@+id/species_detail_classification"
         app:layout_constraintEnd_toEndOf="parent"
@@ -96,11 +105,13 @@
 
     <TextView
         android:id="@+id/species_detail_averageHeight"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:text="@string/averageHeight_generic"
         android:textColor="@color/yellow_star_wars"
         android:textAlignment="center"
+        android:textSize="18sp"
+        android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/species_detail_designation"
         app:layout_constraintEnd_toStartOf="@+id/species_detail_averageHeight_value"
@@ -109,10 +120,11 @@
 
     <TextView
         android:id="@+id/species_detail_averageHeight_value"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:textColor="@color/yellow_star_wars"
         android:textAlignment="center"
+        android:textSize="16sp"
         app:layout_constraintStart_toEndOf="@+id/species_detail_averageHeight"
         app:layout_constraintTop_toBottomOf="@+id/species_detail_designation"
         app:layout_constraintEnd_toEndOf="parent"
@@ -121,11 +133,13 @@
 
     <TextView
         android:id="@+id/species_detail_averageLifespan"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:text="@string/averageLifespan_generic"
         android:textColor="@color/yellow_star_wars"
         android:textAlignment="center"
+        android:textSize="18sp"
+        android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/species_detail_averageHeight"
         app:layout_constraintEnd_toStartOf="@+id/species_detail_averageLifespan_value"
@@ -134,10 +148,11 @@
 
     <TextView
         android:id="@+id/species_detail_averageLifespan_value"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:textColor="@color/yellow_star_wars"
         android:textAlignment="center"
+        android:textSize="16sp"
         app:layout_constraintStart_toEndOf="@+id/species_detail_averageLifespan"
         app:layout_constraintTop_toBottomOf="@+id/species_detail_averageHeight"
         app:layout_constraintEnd_toEndOf="parent"
@@ -146,11 +161,13 @@
 
     <TextView
         android:id="@+id/species_detail_language"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:text="@string/language_generic"
         android:textColor="@color/yellow_star_wars"
         android:textAlignment="center"
+        android:textSize="18sp"
+        android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/species_detail_averageLifespan"
         app:layout_constraintEnd_toStartOf="@+id/species_detail_language_value"
@@ -159,10 +176,11 @@
 
     <TextView
         android:id="@+id/species_detail_language_value"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:textColor="@color/yellow_star_wars"
         android:textAlignment="center"
+        android:textSize="16sp"
         app:layout_constraintStart_toEndOf="@+id/species_detail_language"
         app:layout_constraintTop_toBottomOf="@+id/species_detail_averageLifespan"
         app:layout_constraintEnd_toEndOf="parent"
@@ -180,10 +198,11 @@
 
     <TextView
         android:id="@+id/species_detail_error"
-        android:layout_width="0dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/error_generic"
         android:textAlignment="center"
+        android:textSize="18sp"
         android:textColor="@color/yellow_star_wars"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
